--- a/templates/base.html
+++ b/templates/base.html
@@ -2,12 +2,13 @@
 <html lang="en">
 	<head>
         <script type="text/javascript" src="/static/jquery.min.js"></script>
-        <script type="text/javascript" src="/static/jquery-ui.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
         <script type="text/javascript" src="/static/knockout.js"></script>
         <script type="text/javascript" src="/static/tmp.js"></script>
         <script type="text/javascript" src="/static/knockout-sortable.js"></script>
+        <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css">
         <!-- Latest compiled and minified CSS -->
-        <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/css/bootstrap.min.css" rel="stylesheet">
+        <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
         <!-- Latest compiled and minified JavaScript -->
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/js/bootstrap.min.js"></script>
 	</head>
