fixed bug in random question

--- a/templates/create_form.html
+++ b/templates/create_form.html
@@ -153,8 +153,10 @@
                             <div data-bind="template:{name:getTemplate(logic), data:logic}"></div>
                         </span>
                     </div>
-                    <br>
                     <div class="modal-footer">
+                      <span style='color:red'>
+                        * indicates a required field
+                      </span>
                       <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                     </div>
                   </div><!-- /.modal-content -->
@@ -252,15 +254,15 @@
 <script id="simple" type="text/html">
     <div style="float:left">
       <select data-bind="options:$root.questionNames, value:selectedQuestion, optionsCaption: 'select one...'"></select>
-      <div data-bind="visible:selectedError" class="alert alert-danger">select</div>
+      <div data-bind="visible:selectedError" style="color:red">*</div>
     </div>
     <div style="float:left">
       <select data-bind="options:logics, value:compare, optionsCaption: 'select one...'"></select>
-      <div data-bind="visible:compareError()" class="alert alert-danger">select</div>
+      <div data-bind="visible:compareError()" style="color:red">*</div>
     </div>
     <div style="float:left">
       <input data-bind="value:output">
-      <div data-bind="visible:outputError" class="alert alert-danger">need input</div>
+      <div data-bind="visible:outputError" style="color:red">*</div>
     </div>
     <button data-bind="click: $parent.removeStatement" class="btn btn-warning">-</button>
     <button data-bind="click: turnToCompound" class="btn btn-success">+</button>
@@ -272,7 +274,7 @@
     <span data-bind="template:{name:getTemplate(left), data:left}"></span>
     <div> 
       <select style="margin-left:192px" data-bind="options:operator, value:opSelected, optionsCaption: 'select one...'"></select>
-      <div style="margin-left:192px; margin-right:248px" class="alert alert-danger">need input</div>
+      <div style="margin-left:192px; margin-right:248px; color:red" data-bind="visible:compoundError()" >*</div>
     </div>
     <span data-bind="template:{name:getTemplate(right), data:right}"></span>
     <span style="font-size:24px" data-bind="style: {color: color}"><strong>)</strong></span>
@@ -294,19 +296,35 @@
 
     function pickUpErrors(logic, errors)
     {
-      if (typeof logic.right == 'function')
+      for (key in logic)
       {
-        pickUpErrors(logic.right(), errors);
+        if (key == 'left')
+        {
+          pickUpErrors(logic.left(), errors)
+        }
+
+        if (key == 'right')
+        {
+          if (logic.compoundError())
+          {
+            errors.push(logic.compoundError());
+          }
+          pickUpErrors(logic.right(), errors)
+        }
+
+        else if (key == 'anyError')
+        {
+         errors.push(logic.anyError()); 
+        }
       }
-      else if (typeof logic.left == 'function')
-      {
-        pickUpErrors(logic.left(), errors);
-      }
-      if (typeof logic.anyError == 'function')
-      {
-        errors.push(logic.anyError());
-      }
-      return errors;
+        if (errors.indexOf(true) > -1)
+        {
+          return true;
+        }
+        else
+        {
+          return false;
+        }
     }
 
     function getQuestion($data)
@@ -469,7 +487,8 @@
             {
                 return ('max time: ' + self.maxTimeSetting.max() + ' ' + self.maxTimeSetting.time())
             }, this, {deferEvaluation:true})
-        }
+        };
+
         this.color = ko.observable('solid 5px ' + get_random_color());
         this.options = ko.computed(function() {
             return $.map(self._options(), function(option) {
@@ -557,7 +576,7 @@
         var self = this;
         this.bank = ko.observable();
         this.question = ko.observable();
-        this.section = section;
+        this.sectionId = ko.observable(section.id()); //need to check if this works.
         this.show = ko.observable(false);
         this.edit = ko.observable(true);
         this.showRando = function()
@@ -891,6 +910,11 @@
             }
             else
             {
+                if (value.logic())
+                {
+                  var logicErrors = pickUpErrors(value.logic(), []);
+                  console.log(logicErrors);
+                }
                 $(element).modal('hide');
             }
         }
@@ -1057,25 +1081,21 @@
             {
                 return $.map(section.questions(), function(question)
                {
-                 return question.anyError();
+                 console.log(question);
+                 console.log('ahh');
+                 if (question instanceof Rando)
+                 {
+                  console.log('do we get it?');
+                  return;
+                 }
+                 else
+                 {
+                  return question.anyError();
+                 }
                });
             });
         });
         self.statementErrors = ko.observableArray();
-        var errors = []
-        self.getErrors = ko.computed(function()
-        {
-          return $.map(self.sections(), function(section)
-          {
-            return $.map(section.questions(), function(question)
-            {
-                if (question.logic())
-                {
-                  return pickUpErrors(question.logic(), errors);
-                }
-            });
-          });
-        });
         self.errors = ko.observableArray();
         self.errorIt = ko.computed(function()
         {
@@ -1093,6 +1113,9 @@
                 {
                     if (question instanceof Rando)
                     {
+                        console.log('what about here?');
+                        console.log(viewModel);
+                        console.log(ko.toJS(viewModel));
                         return 'random'
                     }
                     else
@@ -1117,7 +1140,7 @@
 
         self.errorExists = ko.computed(function()
         {
-            if (self.errors().indexOf(true) > -1)
+           if (self.errors().indexOf(true) > -1)
            {
                return true;
            }
@@ -1149,7 +1172,6 @@
     var viewModel = new ViewModel();
     var base = new Section();
     viewModel.sections.push(base);
-
     ko.applyBindings(viewModel);
 
 //    var jsonData = ko.toJSON(viewModel.sections());
